--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Detects YT reposts",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js >> logs/main.log &"
   },
   "author": "JP",
   "license": "ISC",
@@ -20,5 +21,13 @@
     "redis": "^3.1.2",
     "time-utilities": "^1.0.2",
     "util": "^0.12.4"
+  },
+  "eslintConfig": {
+    "parserOptions": {
+      "ecmaVersion": 2021
+    },
+    "rules": {
+      "no-unused-vars": "error"
+    }
   }
 }
