--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "fs": "^0.0.1-security",
     "mustache": "^4.2.0",
     "npmlog": "^5.0.1",
+    "pg": "^8.7.1",
+    "postgres": "^1.0.2",
     "redis": "^3.1.2",
     "time-utilities": "^1.0.2",
     "util": "^0.12.4"
