works with multiple servers now

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "enmap": "^5.8.7",
     "eslint": "^7.32.0",
     "fs": "^0.0.1-security",
+    "js-yaml": "^4.1.0",
     "mustache": "^4.2.0",
     "npmlog": "^5.0.1",
     "pg": "^8.7.1",
