--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "pg": "^8.7.1",
     "postgres": "^1.0.2",
     "redis": "^3.1.2",
+    "shelljs": "^0.8.4",
+    "tall": "^4.0.1",
     "time-utilities": "^1.0.2",
     "util": "^0.12.4"
   },
